tests/negative/traits/method_receiver_empty_init.orng
// method_receiver_empty_init.orng:12:14: error: symbol `self` is never used
//     fn a(self) -> () {  }
//             ^
// 
trait My_Trait {
    fn a(self) -> ()
}

const My_Type = (x: Int, y: Int)

impl My_Trait for My_Type {
    fn a(self) -> () {  }
}

fn main() -> Int {
    let my_val: My_Type = (200, 45)
    my_val.>a()
    45
}